# MindLink

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  init_db.py  pyproject.toml  pytest.ini  run.py  run_tests.py  test_special_chars.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/auth/: __init__.py  auth.py
app/api/files/: __init__.py  files.py
app/api/notes/: __init__.py  notes.py
app/api/v1/: __init__.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  common.py  file.py  note.py  user.py
app/services/: __init__.py  ai_service.py  file_service.py  note_service.py  permission_service.py  user_service.py
app/tests/: test.py
app/utils/: __init__.py  auth.py
frontend/: .eslintrc.js  .prettierrc  LOGIN_INTEGRATION.md  README.md  components.d.ts  env.example  index.html  package-lock.json  package.json  prod-dependencies.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: noteApi.js  request.js
frontend/src/components/: NoteEditor.vue  NoteList.vue  UserMenu.vue
frontend/src/composables/: useDark.js
frontend/src/router/: index.js
frontend/src/stores/: index.js  noteStore.js
frontend/src/utils/: auth.js  constants.js  helpers.js  test-auth.js
frontend/src/views/: FilesView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  NoteEditorView.vue  NoteListView.vue  (+5 more)
tests/: __init__.py  conftest.py  test_ai_service.py  test_file_basic.py  test_file_upload.py
