[tool.poetry]
name = "mindlink"
version = "0.1.0"
description = "基于FastApi的文档管理"
authors = ["code_of_yang <code_of_yang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
pydantic = ">=2.0.0"
sqlalchemy = ">=2.0.16"
alembic = ">=1.11.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
rsa = ">=4.9,<5.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"
openai = ">=1.0.0"
httpx = ">=0.24.0"
redis = ">=4.5.0"
aioredis = ">=2.0.0"
python-dotenv = ">=1.0.0"
markdown = ">=3.4.0"
python-dateutil = ">=2.8.0"
pydantic-settings = ">=2.10.1,<3.0.0"
email-validator = ">=2.3.0,<3.0.0"
pymysql = ">=1.1.2,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"